--- a/style.css
+++ b/style.css
@@ -38,8 +38,8 @@ body {
   left: 40px;
 }
 
-.input-1,
-.input-2 {
+
+.todo-input {
   width: 100%;
   margin-bottom: 5px;
   padding: 8px 12px;
@@ -62,7 +62,7 @@ body {
   font-family: 'Overpass Mono', monospace;
   letter-spacing: -1px;
 }
-btn {
+.todo-button{
   width: 100%;
   background-color: #3897f0;
   border: 1px solid #3897f0;
