--- a/style.css
+++ b/style.css
@@ -47,6 +47,14 @@ body {
   box-sizing: border-box;
   border-radius: 3px;
 }
+.input-1 {
+  width: 100%;
+  margin-bottom: 5px;
+  padding: 8px 12px;
+  border: 1px solid #dbdbdb;
+  box-sizing: border-box;
+  border-radius: 3px;
+}
 
 .overlap-text {
   position: relative;
